# Odin

./: .env.example  .gitignore  .markdownlint.json  .prettierrc.cjs  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE-Apache.md  LICENSE-MIT.md  LICENSE.md  README.md  SECURITY.md  build.sh  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  svelte.config.js  svelte.config.ts  tsconfig.json  vite.config.ts
.agents/: GitHub_MCP.json  mcp.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  pull_request_template.yml
.github/FILE_TEMPLATES/: .gitignore.base  Cargo.toml  Requirements.md  svelte.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_request.yml  feature_request.yml
.github/agent_memory/: active_context.md  handoff.md  progress_tracker.md  project_brief.md  system_patterns.md  tech_stack.md
.github/agents/: Architect.agent.md  Developer.agent.md  (+4 more)
.prompts/: Common.md  Phase 1.md  Phase 2+.md  TODO.md
docs/: CHANGELOG.md  README-db.md  README.md  RELEASE.md  express-server.md  mcp-servers-test-results.md  odin-implementation-plan-2025-11-27.md  openapi.yaml  tdd-workflow-improvements.md
e2e/: health.test.cjs  homepage.test.cjs
scripts/: run-e2e-persistent.cjs  run-e2e-preferred.cjs  run-e2e-selenium.cjs  validate-feature.js
server/: dev.js  prod.js  server.js  server.ts  settings.js  telemetry.js
src/: app.css  app.d.ts  app.html  app.theme.css  hooks.server.ts
static/: site.webmanifest
(+163 files in other folders)
