[package]
name = ""
version = { workspace = true }
edition = { workspace = true }
description = ""
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[workspace]
resolver = "3"
members = []

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
repository = ""
license = "MIT OR Apache-2.0"
keywords = []
categories = []

[workspace.dependencies]
config = { version = "0.15.18", features = ["ini", "json"] }
fern = { version = "0.7.1", features = ["colored", "date-based"] }
log = { version = "0.4.28", features = ["kv_serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.41", features = ["full"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[dependencies]
config = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
